--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,46 @@
-**/.DS_Store
+# macOS system files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# macOS Finder files
+._*
+
+# macOS Trash folder which might appear in some directories
+.Trashes
+
+# Visual Studio specific files
+.vs/
+*.vcxproj.*
+*.userprefs
+
+# Node.js (if using Node.js or npm)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build output (e.g., Webpack or other build tools)
+dist/
+build/
+
+# Log files
+*.log
+
+# Temporary files
+*.tmp
+*.temp
+
+# IDE-specific files
+.idea/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Environmental variables
+.env
+
+# Any other OS-specific files
+Thumbs.db
+Desktop.ini
