--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,23 @@
 # macOS Trash folder which might appear in some directories
 .Trashes
 
+# Windows specific
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Visual Studio Code specific files
+.vscode/
+
 # Visual Studio specific files
 .vs/
 *.vcxproj.*
+*.user
 *.userprefs
+*.suo
+*.userosscache
+*.sln.docstates
 
 # Node.js (if using Node.js or npm)
 node_modules/
@@ -20,8 +33,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build output (e.g., Webpack or other build tools)
+# Build results
+bin/
+obj/
 dist/
+Debug/
+Release/
 build/
 
 # Log files
@@ -30,17 +47,32 @@ build/
 # Temporary files
 *.tmp
 *.temp
-
-# IDE-specific files
-.idea/
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
+*.cache
+*.pdb
 
 # Environmental variables
 .env
 
-# Any other OS-specific files
-Thumbs.db
-Desktop.ini
+# DotNet specific
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
+# Rider IDE
+.idea/
+*.sln.iml
+
+# Dependencies
+*.nuget/
+*.nupkg
+*.snupkg
+packages/
+
+# Resharper
+_ReSharper*/
+*.DotSettings.user
+
+# Test results
+TestResults/
+*.trx
+*.coverage
