--- a/.gitignore
+++ b/.gitignore
@@ -50,46 +50,6 @@ pnpm-debug.log*
 # Vite
 .vite/
 
-# Unity
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
-/[Mm]emoryCaptures/
-/[Rr]ecordings/
-/[Aa]ssets/Plugins/Editor/JetBrains*
-/[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
-/[Aa]ssets/[Ss]treamingAssets/aa.meta
-/[Aa]ssets/[Ss]treamingAssets/aa/*
-ExportedObj/
-Packages/manifest.json
-Packages/packages-lock.json
-.consulo/
-*.csproj
-*.unityproj
-*.sln
-*.pidb
-*.booproj
-*.svd
-*.mdb
-*.opendb
-*.VC.db
-*.pidb.meta
-*.pdb.meta
-*.mdb.meta
-sysinfo.txt
-crashlytics-build.properties
-sys_crashreports
-*.blend1
-*.blend2
-*.backup
-*.diff
-*.patch
-*.orig
-
 # Build results
 bin/
 obj/
@@ -186,3 +146,43 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
+
+# Unity
+# /[Ll]ibrary/
+# /[Tt]emp/
+# /[Oo]bj/
+# /[Bb]uild/
+# /[Bb]uilds/
+# /[Ll]ogs/
+# /[Uu]ser[Ss]ettings/
+# /[Mm]emoryCaptures/
+# /[Rr]ecordings/
+# /[Aa]ssets/Plugins/Editor/JetBrains*
+# /[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
+# /[Aa]ssets/[Ss]treamingAssets/aa.meta
+# /[Aa]ssets/[Ss]treamingAssets/aa/*
+# ExportedObj/
+# Packages/manifest.json
+# Packages/packages-lock.json
+# .consulo/
+# *.csproj
+# *.unityproj
+# *.sln
+# *.pidb
+# *.booproj
+# *.svd
+# *.mdb
+# *.opendb
+# *.VC.db
+# *.pidb.meta
+# *.pdb.meta
+# *.mdb.meta
+# sysinfo.txt
+# crashlytics-build.properties
+# sys_crashreports
+# *.blend1
+# *.blend2
+# *.backup
+# *.diff
+# *.patch
+# *.orig
